添加导航功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
     tools:ignore="AllowBackup">
 
     <activity
-      android:name=".ui.main.MainActivity"
+      android:name=".ui.splash.WelComeActivity"
       android:exported="true"
       android:launchMode="singleTop">
       <intent-filter>
@@ -41,6 +41,9 @@
 
     <activity
       android:name=".ui.details.DetailActivity"
+      android:launchMode="singleTop" />
+    <activity
+      android:name=".ui.main.MainActivity"
       android:launchMode="singleTop" />
 
     <provider
